--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -38,6 +38,7 @@ spec:
           - --metrics
           - 0.0.0.0:2000
           - run
+          - --no-quic
         env:
         - name: TUNNEL_TOKEN
           valueFrom:
