--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -38,8 +38,8 @@ spec:
           # We can regulate the cloudflared version via an image tag.
           # In a k8s environment, the metrics server needs to listen outside the pod it runs on.
           # The address 0.0.0.0:2000 allows any pod in the namespace.
-          # - --protocol
-          # - http2
+          - --protocol
+          - http2
           - --metrics
           - 0.0.0.0:2000
           - run
