--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -40,6 +40,8 @@ spec:
           # The address 0.0.0.0:2000 allows any pod in the namespace.
           - --protocol
           - http2
+          - --edge-ip-version
+          - 6
           - --metrics
           - 0.0.0.0:2000
           - run
