--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -42,8 +42,8 @@ spec:
           #- http2
           - --edge-ip-version
           - "6"
-          - --metrics
-          - 0.0.0.0:2000
+          #- --metrics
+          #- 0.0.0.0:2000
           - run
         env:
         - name: TUNNEL_TOKEN
