--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -28,6 +28,10 @@ spec:
       hostNetwork: true
       # Recommended when using hostNetwork to resolve cluster svc
       dnsPolicy: ClusterFirstWithHostNet 
+      securityContext:
+        sysctls:
+        - name: net.ipv4.ping_group_range
+          value: "0 2147483647"
       containers:
       - name: cloudflared
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default "latest" }}"
