--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -51,16 +51,16 @@ spec:
             secretKeyRef:
               name: {{ include "cloudflare-tunnel-remote.fullname" . }}
               key: tunnelToken
-        livenessProbe:
-          httpGet:
-            # Cloudflared has a /ready endpoint which returns 200 if and only if
-            # it has an active connection to the edge.
-            path: /ready
-            port: 2000
-          initialDelaySeconds: 30
-          periodSeconds: 5
-          timeoutSeconds: 3
-          failureThreshold: 6
+        # livenessProbe:
+        #   httpGet:
+        #     # Cloudflared has a /ready endpoint which returns 200 if and only if
+        #     # it has an active connection to the edge.
+        #     path: /ready
+        #     port: 2000
+        #   initialDelaySeconds: 30
+        #   periodSeconds: 5
+        #   timeoutSeconds: 3
+        #   failureThreshold: 6
       {{- with .Values.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
